--- a/module2_solution/index.html
+++ b/module2_solution/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello Coursera</title>
+	<title>Coursera Assignment</title>
 </head>
 <body>
-<h1>Hello Coursera! It's a great course! I'm enjoying it!!YAY</h1>
+<h1>Our Menu</h1>
+<h2>Chicken</h2>
+<h2>Beef</h2>
+<h2>Sushi</h2>
 </body>
 </html>
